--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "geoip2/geoip2": "^3.0",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^11.9",
+        "laravel/horizon": "^5.29",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
-        "predis/predis": "^2.0"
+        "predis/predis": "^2.0",
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
