added example env file. just update creds

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:FvIFgxS8YaT9zNcxn7GOGY8ND1bYZoKLqw8Q9RaSQTU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -24,7 +24,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dotline_url_shortner
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -34,14 +34,14 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
@@ -62,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_SAFE_BROWSING_API_KEY=
+MAXMIND_USER_ID=
+MAXMIND_LICENSE_KEY=
